--- a/list.html
+++ b/list.html
@@ -4,77 +4,122 @@
     <title>War3 开发者文档</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <body style="background:rgb(25, 25, 25);" >
+    <script>
+        var bool_is_01 = false
+        var bool_is_02 = false
+        var bool_is_03 = false
+        var bool_is_04 = false
+        function btnRst_Click_01() {
+            if (bool_is_01 == true){
+            bool_is_01 = false
+            document.getElementById("div_01").style.display="none";
+            }else{
+            bool_is_01 = true
+            document.getElementById("div_01").style.display="block";
+            }
+        }
+        function btnRst_Click_02() {
+            if (bool_is_02 == true){
+            bool_is_02 = false
+            document.getElementById("div_02").style.display="none";
+            }else{
+            bool_is_02 = true
+            document.getElementById("div_02").style.display="block";
+            }
+        }
+        function btnRst_Click_03() {
+            if (bool_is_03 == true){
+            bool_is_03 = false
+            document.getElementById("div_03").style.display="none";
+            }else{
+            bool_is_03 = true
+            document.getElementById("div_03").style.display="block";
+            }
+        }
+        function btnRst_Click_04() {
+            if (bool_is_04 == true){
+            bool_is_04 = false
+            document.getElementById("div_04").style.display="none";
+            }else{
+            bool_is_04 = true
+            document.getElementById("div_04").style.display="block";
+            }
+        }
+
+        </script> 
     <aside 
         class="sidebar"
         style="background:rgb(25, 25, 25); "
         >
     <h1><a  style="color: aliceblue; text-decoration:none"  target="frme_align"  href= "update.html"  >War3 开发者文档</a></h1>
-        <p style="color: rgb(0, 200, 0);">成为作者</p>
-        <ul>
+    <p class="button" onclick = "btnRst_Click_01()" target="frme_align" style="color: rgb(0, 200, 0);">成为作者</p>
+        <ul id="div_01" style="display:none;">
             <li><a class="button"  target="frme_align"  href="pt/dz.html" >官方对战平台</a></li>
             <li><a class="button"  target="frme_align"  href="pt/11.html" >11对战平台 </a> </li>
         </ul>
-        <p style="color: rgb(0, 200, 0);">YDWE - 技术</p>
-        <ul>
+    
+    <br><p class="button" onclick = "btnRst_Click_02()" target="frme_align" style="color: rgb(0, 200, 0);">YDWE - 技术</p>
+        <ul id="div_02" style="display:none;">
             <p>平台</p>
-        <ul>
-            <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟修改积分.html" >延迟修改积分</a></li>
-            <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟读取积分.html" >延迟读取积分</a></li>
-            <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟修改存档.html" >延迟修改存档</a></li>
-            <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟读取存挡.html" >延迟读取存挡</a></li>
-            </ul>
-            <p>坐标</p>
             <ul>
-            <li><a class="button"  target="frme_align" href="ydwe/Coord/获取全局句柄.html" >获取全局句柄</a></li>
-            <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标清除.html" >全局坐标清除</a></li>
-            <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标设置.html" >全局坐标设置</a></li>
-            <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标移动.html" >全局坐标移动</a></li>
-            <li><a class="button"  target="frme_align"  href="ydwe/Coord/全局坐标相对.html" >坐标相对移动</a></li>
-            <li><a class="button"  target="frme_align"  href="ydwe/Coord/世界转为屏幕.html" >世界坐标转为屏幕</a></li>
-            <li><a class="button"  target="frme_align"  href="ydwe/Coord/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
-            <li><a class="button"  target="frme_align"  href="ydwe/Coord/单位转为屏幕.html" >单位坐标转为屏幕</a></li>
-            </ul>
-            <p>字符</p>
-            <ul>
-            <li><a class="button" target="frme_align" href="ydwe\code\动态进制加密.html" >动态进制加密</a></li>
-            <li><a class="button" target="frme_align" href="ydwe\code\动态进制解密.html" >动态进制解密</a></li>
-            <li><a class="button" target="frme_align" href="ydwe\code\截取字符.html" >截取字符</a></li>
-            <li><a class="button" target="frme_align" href="ydwe\code\替换字符.html" >替换字符</a></li>
-            </ul>
-            <p>逆天</p>
-            <ul>
-            <li><a class="button" target="frme_align" href="ydwe\YD\逆天局部清空.html" >逆天局部清空</a></li>
-            <li><a class="button" target="frme_align" href="ydwe\YD\逆天句柄重置.html" >逆天句柄重置</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟修改积分.html" >延迟修改积分</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟读取积分.html" >延迟读取积分</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟修改存档.html" >延迟修改存档</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/PT/延迟读取存挡.html" >延迟读取存挡</a></li>
+                </ul>
+                <p>坐标</p>
+                <ul>
+                <li><a class="button"  target="frme_align" href="ydwe/Coord/获取全局句柄.html" >获取全局句柄</a></li>
+                <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标清除.html" >全局坐标清除</a></li>
+                <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标设置.html" >全局坐标设置</a></li>
+                <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标移动.html" >全局坐标移动</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/Coord/全局坐标相对.html" >坐标相对移动</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/Coord/世界转为屏幕.html" >世界坐标转为屏幕</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/Coord/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
+                <li><a class="button"  target="frme_align"  href="ydwe/Coord/单位转为屏幕.html" >单位坐标转为屏幕</a></li>
+                </ul>
+                <p>字符</p>
+                <ul>
+                <li><a class="button" target="frme_align" href="ydwe\code\动态进制加密.html" >动态进制加密</a></li>
+                <li><a class="button" target="frme_align" href="ydwe\code\动态进制解密.html" >动态进制解密</a></li>
+                <li><a class="button" target="frme_align" href="ydwe\code\截取字符.html" >截取字符</a></li>
+                <li><a class="button" target="frme_align" href="ydwe\code\替换字符.html" >替换字符</a></li>
+                </ul>
+                <p>逆天</p>
+                <ul>
+                <li><a class="button" target="frme_align" href="ydwe\YD\逆天局部清空.html" >逆天局部清空</a></li>
+                <li><a class="button" target="frme_align" href="ydwe\YD\逆天句柄重置.html" >逆天句柄重置</a></li>
             </ul>
         </ul>
-        <p style="color: rgb(0, 200, 0);">Wurst - 技术</p>
+
+    <br><p class="button" onclick = "btnRst_Click_03()" target="frme_align" style="color: rgb(0, 200, 0);">Wurst - 技术</p>
+        <ul id="div_03" style="display:none;">
+            <p>界面</p>
             <ul>
-                <p>界面</p>
-                <ul>
-                    <li><a class="button"  target="frme_align" href="wurst\Frame\设置像素宽高.html" >设置像素宽高</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\Frame\设置绝对位置.html" >设置绝对位置</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\Frame\设置相对位置.html" >设置相对位置</a></li>
-                </ul>
-                <p>定义</p>
-                <ul>
-                    <li><a class="button"  target="frme_align" href="wurst\code\万能转换.html" >万能转换</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\code\设置万能定义.html" >设置万能定义</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\code\读取万能定义.html" >读取万能定义</a></li>
-                </ul>
-                <p>平台</p>
-                <ul>
-                    <li><a class="button"  target="frme_align" href="wurst\api\平台api.html" >平台api</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\api\延迟修改积分.html" >延迟修改积分</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\api\延迟获取积分.html" >延迟获取积分</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\api\延迟修改存档.html" >读取修改存档</a></li>
-                    <li><a class="button"  target="frme_align" href="wurst\api\延迟获取存档.html" >读取获取存档</a></li>
-                </ul>
+                <li><a class="button"  target="frme_align" href="wurst\Frame\设置像素宽高.html" >设置像素宽高</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\Frame\设置绝对位置.html" >设置绝对位置</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\Frame\设置相对位置.html" >设置相对位置</a></li>
             </ul>
-        <p style="color: rgb(0, 200, 0);">工具</p>
+            <p>定义</p>
             <ul>
+                <li><a class="button"  target="frme_align" href="wurst\code\万能转换.html" >万能转换</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\code\设置万能定义.html" >设置万能定义</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\code\读取万能定义.html" >读取万能定义</a></li>
+            </ul>
+            <p>平台</p>
+            <ul>
+                <li><a class="button"  target="frme_align" href="wurst\api\平台api.html" >平台api</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\api\延迟修改积分.html" >延迟修改积分</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\api\延迟获取积分.html" >延迟获取积分</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\api\延迟修改存档.html" >读取修改存档</a></li>
+                <li><a class="button"  target="frme_align" href="wurst\api\延迟获取存档.html" >读取获取存档</a></li>
+            </ul>
+        </ul>
+    <br><p class="button" onclick = "btnRst_Click_04()" target="frme_align" style="color: rgb(0, 200, 0);">工具</p>
+        <ul id="div_04" style="display:none;">
             <li><a class="button"  target="frme_align" href="lni\lni可视化编辑器.html" >lni可视化编辑器</a></li>
             <li><a class="button"  target="frme_align" href="lni\w3xlni.html" >w3xlni</a></li>
-            </ul>
+        </ul>
     </aside>
     </body>
 </html>
